--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="PM">
     <head>
         
     </head>
-    <body>
-        <h1>2016 Perspective Manipulator</h1>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <body ng-controller="PMCtrl">  
+     <md-toolbar md-scroll-shrink>
+   <div class="md-toolbar-tools">
+     <h3>
+       <span>2016 Perspective Manipulator</span>
+     </h3>
+   </div>
+ </md-toolbar>
+     <div ui-view></div>
+        
     </body>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
+  <script src="main.js"></script>
+  
 </html>
